Revision history for Hailo

{{$NEXT}}

0.39 2010-04-09 13:21:22

    - Set the homepage field in META.yml to http://hailo.org

    - Add TODO tests for the Words tokenizer. There are some
      sub-optimal capitalization behaviors we'd like to fix.

    - Use Prereq phases in Dist::Zilla. Hailo will have proper
      Runtime/Test/Recommends dependencies when META.yml 2.0 comes
      out.

0.38 2010-04-03 18:15:17

    - Clean up the code in Hailo::Engine::Default. It's now easier to
      read and doesn't have duplication.

    - Depend on IPC::System::Simple. Used by autodie to run
      utils/hailo-benchmark-lib-vs-system

    - Link to http://hailo.org and the freshmeat and ohloh pages for
      hailo.

0.37 2010-03-31 14:28:46

    - Very minor release. Switch to using
      Dist::Zilla::Plugin::MakeMaker::Awesome for the build tools.

0.36 2010-03-29 00:15:35

    - Add a test to try to smoke out a test failure we've been having
      for a while. See the commit message for
      21f68bd79d2fc59505887311042d6d16c5cf79dd for a very long and
      boring explanation.

0.35 2010-03-27 21:27:33

    - The error "You've manually supplied an order of" error message
      was always incorrect. It contained variables that weren't being
      interpolated.

    - Move some of our test data into the new Bot::Training dist.

    - Fix 'v-string in use/require non-portable' warnings from a osx
      smoker by using 5.010 instead of 5.10.0.

0.34 2010-03-20 23:26:27

    - Reword the UPGRADING section in Hailo's POD to be less
      confusing.

    - Die if the user manually specified an order that isn't
      equivalent to the existing database he's loading from.

    - Hailo now uses CPAN's RT as its default bugtracker instead of
      GitHub's issue tracker. RT sucks but at least we can get at our
      issues using something that isn't a web interface if we use RT.

    - Link to our new website at http://hailo.github.com and mention